--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6550,27 +6550,45 @@ snowball_earth.11.name:0 "The First Thaw"
  #The rest of the Warform
  #Districts
  district_pd_warform_housing: "Unit Storage District"
- district_pd_warform_housing_desc: "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
+ district_pd_warform_housing_desc: "Originally designed as storage space to hold warforms."
  district_pd_warform_housing_plural: "Unit Storage Districts"
  district_pd_warform_industrial: "Warform Factory District"
  district_pd_warform_industrial_desc: "This is where warforms were built."
  district_pd_warform_industrial_plural: "Warform Factory Districts"
- district_pd_warform_energy: "Energy Core District"
- district_pd_warform_energy_desc: "By tapping directly into the energy core we can produce much energy."
+ district_pd_warform_energy: "Warform Power Core District"
+ district_pd_warform_energy_desc: "By tapping directly into the energy core we can produce high amounts of energy."
  district_pd_warform_energy_plural: "Energy Core Districts"
- district_pd_warform_science: "Organic Research District"
+ district_pd_warform_science: "Research District"
  district_pd_warform_science_desc: "The machine creaters did experiemnts on organics here, we can use."
  district_pd_warform_science_plural: "Organic Research Districts"
- district_pd_warform_cultural: "Cultural Database District"
- district_pd_warform_cultural_desc: "The machine creaters of this station catagoled the culture"
- district_pd_warform_cultural_plural: "Cultural Database Districts"
+ district_pd_warform_blue:0 "REPLACE_ME"
+ district_pd_warform_blue_desc:0 "REPLACE_ME"
+ district_pd_warform_blue_plural:0 "REPLACE_ME"
+ district_pd_warform_red:0 "REPLACE_ME"
+ district_pd_warform_red_desc:0 "REPLACE_ME"
+ district_pd_warform_red_plural:0 "REPLACE_ME"
+ district_pd_warform_orange:0 "REPLACE_ME"
+ district_pd_warform_orange_desc:0 "REPLACE_ME"
+ district_pd_warform_orange_plural:0 "REPLACE_ME"
+ mod_district_pd_warform_energy_max: "Warform Power Core Districts"
+ mod_district_pd_warform_science_max: "Warform Research Districts"
  #Deposits
- d_pd_warform_power_core: "Power Core"
- d_pd_warform_power_core_desc: "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. No where near it's orevious power levels, it still produces a considerable amount of power."
- d_pd_warform_factory: "Unit Construction Zone"
- d_pd_warform_factory_desc: "Orginally set up to pump out warforms at an alarming rate."
- d_pd_warform_research: "Organic Testing Labratory"
- d_pd_warform_research_desc: "Extreme exploratory research was done on organics in these labs."
+ d_pd_warform_power_core: "Destroyed Power Core"
+ d_pd_warform_power_core_desc: "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. Currenty broken, it should be possible to repair it."
+ d_pd_warform_power_core_fixed: "Power Core"
+ d_pd_warform_power_core_fixed_desc: "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. Repaired and back to 76.1% of orginal effiency, it can once again produce power for the station and beyond."
+ d_pd_warform_factory: "Jammed Unit Construction Zone"
+ d_pd_warform_factory_desc: "Orginally set up to pump out warforms at an alarming rate, it is now just a series of disrepaired conveyer belts."
+ d_pd_warform_factory_fixed:0 "Advanced Industrial District"
+ d_pd_warform_factory_fixed_desc:0 "This highly advanced industrial district is able to produce alloys and or goods at an impressive rate."
+ d_pd_warform_research: "Wrecked Organic Testing Labratory"
+ d_pd_warform_research_desc: "Extreme exploratory research were done on organics in these labs. They are now in need of repair."
+ d_pd_warform_research_fixed: "Labratory Districts"
+ d_pd_warform_research_fixed_desc: "Extreme exploratory research were done on organics in these labs, we have repaired them to suit our needs."
+ d_pd_warform_drone_storage:0 "Broken Warform Storage"
+ d_pd_warform_drone_storage_desc:0 "These zones used to store the hundreds of warforms this mobile station housed."
+ d_pd_warform_war_room:0 "Empty War Rooms"
+ d_pd_warform_war_room_desc:0 "These high tech areas used to house the now defunt coordintion drones of this station. It's modular design means it has great potential for repairs."
  #Events
  pdwarform.10.name: "Battle Wreckage"
  pdwarform.10.desc: "As [Root.GetName] entered the [Root.GetStarName] they discovered considerable battle debris from two groups and a planet destroyed by nuclear bombardment. In orbit, a space station sits silently watching the wrecked world. Several smaller automated ships have been broadcasting not to approach 'MWF-014' or face extermination."
@@ -6589,7 +6607,7 @@ snowball_earth.11.name:0 "The First Thaw"
  approach_pd_warform_colonization_team:0 "Local Teams Only"
  approach_pd_warform_extra_support:0 "Send Supplies"
  stage_housing: "Unit Storage"
- stage_housing_desc: "Orginally designed to house compact warforms, we will need to rework these districts to suit our needs."
+ stage_housing_desc: "These coverted housing districts were orginally designed to store compact warforms."
  stage_power: "Power Core"
  stage_power_desc: "This core once powered state-of-the art jump drives, which are no longer operative. No longer repairable it can be adapted for energy collection."
  stage_industrial: "Warform Factory"
@@ -6599,7 +6617,28 @@ snowball_earth.11.name:0 "The First Thaw"
  stage_final: "Final Repairs"
  stage_final_desc: "The left over areas have considerable potential, the machines that created this mobile station seemed to have unfinished plans for these areas."
  #Situation Events
- pdwarform.305.name:0 "Storage District Repair"
+ pdwarform.305.name:0 "Storage District Repairs Compelte"
  pdwarform.305.desc:0 "The unit storage is now completely recreated to suit our needs.\n\nThe next step will to be tackle the power core."
  pdwarform.305.a:0 "Excellent."
  pdwarform.305.a.tooltip:0 "The unit storage district will now be able to house us well."
+ pdwarform.310.name:0 "Unlimted Power Generation"
+ pdwarform.310.desc:0 "This advanced power planet has been studied and repaired. We could continue to use it for the station, or we could reverse engineer it to further our understanding of power generation techniques."
+ pdwarform.310.a:0 "Turn it back on."
+ pdwarform.310.a.tooltip:0 "We will return function to the power core. Allowing us to generate energy from it."
+ pdwarform.310.b:0 "We will learn it's secrets."
+ pdwarform.310.b.tooltip:0 "We will rever engineer the power core, gaining the option to be able to create more of it's power source."
+ pdwarform.315.name:0 "Factory Online"
+ pdwarform.315.desc:0 "This anicent factory used to produce warforms at a terrrifing rate, but this type of design is only good to create warforms. We have a choice; keep the ability to create the warforms, or turn this robot factory into a powerful industrial district."
+ pdwarform.315.a:0 "Warforms. Now."
+ pdwarform.315.a.tooltip:0 "We will repair this warform factory to it's orginal specs, only under our control."
+ pdwarform.315.b:0 "We have no need for death machines."
+ pdwarform.315.b.tooltip:0 "We will re-focus the districts to a more traditional set up."
+ pdwarform.320.name:0 "Labratory Restoration"
+ pdwarform.320.desc:0 "These labs were orginally used to subject organics to strange and painful cybernetic experiments. We could return the labs to their orginal configuration and reconstruct some of the research. Or we could set it to a more traditional labratory setting."
+ pdwarform.320.a:0 "Those experiments were just wrong, erase that information."
+ pdwarform.320.a.tooltip:0 "We will rebuild the labs to a more traditional set up."
+ pdwarform.320.b:0 "There is much to learn from these machine's experiments."
+ pdwarform.320.b.tooltip:0 "We will repair the labs to better match their orginal set up. This will fruther our understanding machines and organics."
+ #Armies
+ pd_cybrex_warform:0 "Warform"
+ pd_cybrex_warform_desc:0 "This titanic robot towers over most buildings, with enough firepower to devastate cities."
