--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6474,7 +6474,7 @@ snowball_earth.11.name:0 "The First Thaw"
  d_pd_roguecap_arc_desc:0 "We will build an immense Servitor Capital Complex to greatly improve our ability to serve our Bio-Trophies."
  job_pd_capital_bio_politician:0 "Bio-Politician"
  job_pd_capital_bio_politician_plural:0 "Bio-Politicians"
- job_pd_capital_bio_politician_desc:0 "Some Bio-Trophies are only truly happy if they appear more important than the rest. Thankfully, having another biological creature tell them what to do improves the other Bio-Trophy's compliance, making it easier on our drones to pamper."
+ job_pd_capital_bio_politician_desc:0 "Some Bio-Trophies are only truly happy if they appear more important than the rest. Having another biological in a dominant role improves others. This makes it easier for our drones to pamper."
  mod_job_pd_capital_bio_politician_add:0 "$job_pd_capital_bio_politician$ Jobs"
  mod_job_pd_capital_bio_politician_per_pop:0 "§G+1§! $job_pd_capital_bio_politician$ Job per $VALUE$ Pops"
  mod_job_pd_capital_bio_politician_per_pop_short:0 "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ per $VALUE$ £pop£"
@@ -6524,6 +6524,9 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
 
+ #Odds & Ends
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+
  ### April Update Cyberx MWF Unique World
  pc_pd_orange_warform:0 "MWF-14"
  pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
@@ -6543,10 +6546,6 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_pc_pd_blue_warform_habitability:0 "MWF-14 Habitability"
  trait_pc_pd_blue_warform_preference:0 "MWF-14 Preference"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
-
- #Odds & Ends
- TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
-
  #The rest of the Warform
  #Districts
  district_pd_warform_housing: "Unit Storage District"
@@ -6561,14 +6560,14 @@ snowball_earth.11.name:0 "The First Thaw"
  district_pd_warform_science: "Research District"
  district_pd_warform_science_desc: "The machine creaters did experiemnts on organics here, we can use."
  district_pd_warform_science_plural: "Organic Research Districts"
- district_pd_warform_blue:0 "REPLACE_ME"
- district_pd_warform_blue_desc:0 "REPLACE_ME"
- district_pd_warform_blue_plural:0 "REPLACE_ME"
- district_pd_warform_red:0 "REPLACE_ME"
- district_pd_warform_red_desc:0 "REPLACE_ME"
- district_pd_warform_red_plural:0 "REPLACE_ME"
- district_pd_warform_orange:0 "REPLACE_ME"
- district_pd_warform_orange_desc:0 "REPLACE_ME"
+ district_pd_warform_blue:0 "Peace District"
+ district_pd_warform_blue_desc:0 "These districts are dedicated to our art and culture."
+ district_pd_warform_blue_plural:0 "Leisure Districts"
+ district_pd_warform_red:0 "War District"
+ district_pd_warform_red_desc:0 "Districts dedicated to the coordination of our war efforts."
+ district_pd_warform_red_plural:0 "War Command Districts"
+ district_pd_warform_orange:0 "Machine War Districts"
+ district_pd_warform_orange_desc:0 "These districts "
  district_pd_warform_orange_plural:0 "REPLACE_ME"
  mod_district_pd_warform_energy_max: "Warform Power Core Districts"
  mod_district_pd_warform_science_max: "Warform Research Districts"
@@ -6639,6 +6638,47 @@ snowball_earth.11.name:0 "The First Thaw"
  pdwarform.320.a.tooltip:0 "We will rebuild the labs to a more traditional set up."
  pdwarform.320.b:0 "There is much to learn from these machine's experiments."
  pdwarform.320.b.tooltip:0 "We will repair the labs to better match their orginal set up. This will fruther our understanding machines and organics."
+ pdwarform.325.name:0 "Stuff In the Buffer"
+ pdwarform.325.desc:0 "As our teams were cleaning the remaning sections of the Warform Factory and they discovered a signal trapped in the communication buffer of the station. This signal is the reason we were able to find base in a dormant state, it was directed to go into standby mode by it's creators, but a follow up signal was never recieved. Because of the standby mode we have an opportunity; we craft a follow up signal to have the station better suit our needs."
+  #Red
+ pdwarform.325.a:0 "War is constant."
+ pdwarform.325.a.tooltip:0 "We will update the war factories battle functions to modern standards, creating a district of war."
+  #Blue
+ pdwarform.325.b:0 "The war factory will produce peace from now on."
+ pdwarform.325.b.tooltip:0 "We will repair the war factories final district with a focus on tradition and culture."
+  #Blue - RS Only
+ pdwarform.325.c:0 "This would make an ideal home for our biotrophies."
+ pdwarform.325.c.tooltip:0 "We will repair the war factories final districts to be focused on making sure our biotrophies are nearby and taken care of."
+  #Orange - Robot Only
+ pdwarform.325.d:0 "Reset this units programming."
+ pdwarform.325.d.tooltip:0 "We will it's orginal function, a mix of evulation and war preperation."
  #Armies
  pd_cybrex_warform:0 "Warform"
  pd_cybrex_warform_desc:0 "This titanic robot towers over most buildings, with enough firepower to devastate cities."
+ #Jobs
+ job_warform_researcher:0 "Warform Researcher"
+ job_warform_researcher_plural:0 "Warform Researchers"
+ job_warform_researcher_icon:0 "£job_warform_researcher£"
+ job_warform_researcher_desc:0 "Focused on studying the remains of the warforms cybernetic experiments."
+ job_warform_researcher_effect_desc:1 "£job_warform_researcher£ $job_warform_researcher_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £society£ £engineering£ §YResearch Points§!"
+ mod_job_warform_researcher_add:0 "$job_warform_researcher$ Jobs"
+ mod_job_warform_researcher_per_pop:0 "§G+1§! $job_warform_researcher$ Job per $VALUE$ Pops"
+ mod_job_warform_researcher_per_pop_short:0 "\n§G+1§! £mod_job_warform_researcher_add£ per $VALUE$ £pop£"
+ job_warform_calculator:0 "Warform Calculator"
+ job_warform_calculator_plural:0 "Warform Calculators"
+ job_warform_calculator_desc:0 "£job_warform_calculator£"
+ job_warform_calculator_effect_desc:1 "£job_warform_calculator£ $job_warform_calculator_plural$ turn £minerals£ §Y$minerals$§! into £society£ £engineering£ §YResearch Points§! for new technologies"
+ mod_job_warform_calculator_add:0 "Endlessly processing equations, probabilities, and testing the remains of the warforms cybernetic experiments."
+ mod_job_warform_calculator_add:0 "$job_warform_calculator$ Jobs"
+ mod_job_warform_calculator_per_pop:0 "§G+1§! $job_warform_calculator$ Job per $VALUE$ Pops"
+ mod_job_warform_calculator_per_pop_short:0 "\n§G+1§! £mod_job_warform_calculator_add£ per $VALUE$ £pop£"
+ job_warform_brain_drone:0 "Brain Drone"
+ job_warform_brain_drone_plural:0 "Warform Brain Drones"
+ job_warform_brain_drone_icon:0 "£job_warform_brain_drone£"
+ job_warform_brain_drone_desc:1 "Warform Brain Drones studying the remains of the warforms cybernetic experiments."
+ job_warform_brain_drone_effect_desc:1 "£job_warform_brain_drone£ $job_warform_brain_drone_plural$ turn £minerals£ §Y$minerals$§! into £society£ £engineering£ §YResearch Points§! for new technologies"
+ mod_job_warform_brain_drone_add:0 "$job_warform_brain_drone$ Jobs"
+ mod_job_warform_brain_drone_per_pop:0 "§G+1§! $job_warform_brain_drone$ Job per $VALUE$ Pops"
+ mod_job_warform_brain_drone_per_pop_short:0 "\n§G+1§! £mod_job_warform_brain_drone_add£ per $VALUE$ £pop£"
+ #Odds and Ends
+ NAME_MWF-14:0 "MWF-14"
