--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6567,10 +6567,13 @@ snowball_earth.11.name:0 "The First Thaw"
  district_pd_warform_red_desc:0 "Districts dedicated to the coordination of our war efforts."
  district_pd_warform_red_plural:0 "War Command Districts"
  district_pd_warform_orange:0 "Machine War Districts"
- district_pd_warform_orange_desc:0 "These districts "
- district_pd_warform_orange_plural:0 "REPLACE_ME"
+ district_pd_warform_orange_desc:0 "These districts TODO"
+ district_pd_warform_orange_plural:0 "Machine War Districts"
  mod_district_pd_warform_energy_max: "Warform Power Core Districts"
  mod_district_pd_warform_science_max: "Warform Research Districts"
+ district_pd_warform_cultural:0 "Leisure District"
+ district_pd_warform_cultural_desc:0 "Fixing up this warform factory into a place of arts and culture wasn't easy, but it was worth it."
+ district_pd_warform_cultural_plural:0 "Leisure Districts"
  #Deposits
  d_pd_warform_power_core: "Destroyed Power Core"
  d_pd_warform_power_core_desc: "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. Currenty broken, it should be possible to repair it."
@@ -6615,6 +6618,7 @@ snowball_earth.11.name:0 "The First Thaw"
  stage_research_desc: "Extreme research was directed at organic-cybrog experimentation, we will have to choose how to recreate them."
  stage_final: "Final Repairs"
  stage_final_desc: "The left over areas have considerable potential, the machines that created this mobile station seemed to have unfinished plans for these areas."
+ pd_warform_situation_monthly_change_tooltip: "The speed of this §YSituation§! will progress towards completetion based on our selected §YApproach§!."
  #Situation Events
  pdwarform.305.name:0 "Storage District Repairs Compelte"
  pdwarform.305.desc:0 "The unit storage is now completely recreated to suit our needs.\n\nThe next step will to be tackle the power core."
@@ -6680,5 +6684,15 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_job_warform_brain_drone_add:0 "$job_warform_brain_drone$ Jobs"
  mod_job_warform_brain_drone_per_pop:0 "§G+1§! $job_warform_brain_drone$ Job per $VALUE$ Pops"
  mod_job_warform_brain_drone_per_pop_short:0 "\n§G+1§! £mod_job_warform_brain_drone_add£ per $VALUE$ £pop£"
+ #Origin
+ origin_pd_warform_world:0 "Forgotten Cyber-Drones"
+ origin_pd_warform_world_desc:0 "The remnants of cybernetic experiemnets, we have awoken after eons of hybernation. Our homes and people long gone, we will the ancient Warform Factory that destoryed our homes to head out to the stars."
+ origin_tooltip_pd_warform_world_effects:0 "- Homeworld is the Warform Factory §Y$pc_pd_orange_warform$§! (Size: £planetsize£ §Y20§!)\n- Start with the Cybernetic Trait.\n- Has access to several unique technologies.\n- The Warform Factory can be tranformed to suit our needs in the future."
  #Odds and Ends
  NAME_MWF-14:0 "MWF-14"
+ d_pd_destoryed_cities:0 "Destoryed Cities"
+ d_pd_destoryed_cities_desc:0 "Signs of orbital bombardment and damage by gigantic warforms litter these destoryed cities. They must be cleared before the area will be usable but are full of ancient treasures."
+ pd_warform_nearby_init_NAME: "Warfactory Neighbor"
+ pd_warform_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Warfactory Habitat, it will not spawn again in the game."
+ d_remaining_stores_warform:0 "Left Over Supplies"
+ d_remaining_stores_warform_desc:0 "The reaming Nuti-paste and mineral supplies left behind by the machines will last for a few hundred years at least."
