--- a/planetary_diversity/localisation/replace/pdreplace_l_english.yml
+++ b/planetary_diversity/localisation/replace/pdreplace_l_english.yml
@@ -8,3 +8,10 @@
 
  anomaly.6745.desc:0 "For as long as we [Root.Owner.GetSpeciesNamePlural] have been able to look to the stars for new homes, [From.GetName] has been a naive dream: a place we would look to with optimism; a new home. Sadly as our telescopes got better, we realized that the planet would probably be a frozen hellscape - a theory which we have confirmed today.\n\nThere is hope, however; this world has all the building blocks necessary for a habitable planet. It might just need a slight push..."
  anomaly.6750.desc:0 "This cold planet appears to have all the building blocks for a habitable world. Perhaps there is something that can be built here."
+ 
+ #Testing
+ #pc_continental: "[pd_continental_class_name]"
+ #pd_retinal:0 "Retinal World"
+ #pd_retinal_desc:0 "Retinal World"
+ #pd_retinal_class_name:0 "Retinal World"
+ #pd_continental_class_name_default:0 "Continental"
