--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6696,3 +6696,4 @@ snowball_earth.11.name:0 "The First Thaw"
  pd_warform_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Warfactory Habitat, it will not spawn again in the game."
  d_remaining_stores_warform:0 "Left Over Supplies"
  d_remaining_stores_warform_desc:0 "The reaming Nuti-paste and mineral supplies left behind by the machines will last for a few hundred years at least."
+ START_SCREEN_PD_WARFORM_CYBORG: "Words will go here darling Cyborg. We were stolen from our home below. They Did horrible experiments on us and then put us in freezers. We awoke, thousands of years later, we will rebuild our home."
