--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6656,6 +6656,17 @@ snowball_earth.11.name:0 "The First Thaw"
   #Orange - Robot Only
  pdwarform.325.d:0 "Reset this units programming."
  pdwarform.325.d.tooltip:0 "We will it's orginal function, a mix of evulation and war preperation."
+ pdwarform.400.name:0 "Our Destoryed Homeworld"
+ pdwarform.400.desc:0 "We awoke to find our homeworld a nuclear wasteland. For the time being we will have to continue to call this death factory home, but we will focus on returning to our once home to it's former beauty."
+ pdwarform.400.a:0 "Get our researchers on it."
+ PD_RESTORE_THE_WARFORM_HOMEWORLD:0 "Homeworld Restoration Project"
+ PD_RESTORE_THE_WARFORM_HOMEWORLD_DESC:0 "Thousands of years ago the Warform Factory destoryed our homeworld. We will attempt to repair the damage and make our old homeworld livable again."
+ pdwarform.405.name:0 "A Place To Call Home"
+ pdwarform.405.desc:0 "Our homeworld is once again the beautiful gem is once was."
+ pdwarform.405.a:0 "Excellent."
+ pdwarform.410.name:0 "Tranformation"
+ pdwarform.410.desc:0 "With out planet returned to a habitable state, its time that we started to see what the warform is capible of. We could study both how to change the planet itself and how continue the cybernetic research they inflicted on us."
+ pdwarform.410.a:0 "We will unlock it's secrets."
  #Armies
  pd_cybrex_warform:0 "Warform"
  pd_cybrex_warform_desc:0 "This titanic robot towers over most buildings, with enough firepower to devastate cities."
@@ -6699,3 +6710,16 @@ snowball_earth.11.name:0 "The First Thaw"
  START_SCREEN_PD_WARFORM_CYBORG: "Words will go here darling Cyborg. We were stolen from our home below. They Did horrible experiments on us and then put us in freezers. We awoke, thousands of years later, we will rebuild our home."
  building_pd_warform_cyber_lab: "Cyber-Labratory"
  building_pd_warform_cyber_lab_desc: "This labrartory expands on the cybernetic experiments done on the Warform Factory world."
+ tech_pd_warform_cyber_lab: "Cyber-Labratory Network"
+ tech_pd_warform_cyber_lab_desc: "Using the MWF-14 world as network hub, we should be able to create several cybernetic focuses labratories which will further our knowledge on the subject and boost our robotic assembly speed."
+ tech_pd_warform_transforming:0 "Warform Transformation"
+ tech_pd_warform_transforming_desc:0 "The Warform Factory MFW-14 was once highly modular and transformable to meet the needs of it's machine makers. We should be able to replicate this on the planet."
+ TECH_PD_WARFORM_TRANSFORM_TITLE: "§HUnlocks Decisions:§! MWF-14 Trasform Decisions"
+ TECH_PD_WARFORM_TRANSFORM_DESC: "The Mobile Warform Factory once had the ability to transform its districts to suit it's needs. We will be able to recreate that effect to a small degree."
+ #Transformatino Decisions
+ decision_pd_warform_transform_research_regular:0 "Tranform Research Districts"
+ decision_pd_warform_transform_research_regular_desc:0 "We will tranform this district to a standard research set up."
+ decision_pd_warform_transform_regular_tooltip:0 "This district will be tranfomed to be staffed by regular researchers studying a range of topics."
+ decision_pd_warform_transform_research_cyberlab:0 "Tranform Research Districts"
+ decision_pd_warform_transform_research_cyberlab_desc:0 "We will tranform this district to a cybernetic reseach set up, so we can focus on technologies suited to cybernetics."
+ decision_pd_warform_transform_organic_tooltip: "This district will be tranfomed to be staffed by specialized cybernetic researchers."
