Cyberwarform Final Script

--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6716,10 +6716,27 @@ snowball_earth.11.name:0 "The First Thaw"
  tech_pd_warform_transforming_desc:0 "The Warform Factory MFW-14 was once highly modular and transformable to meet the needs of it's machine makers. We should be able to replicate this on the planet."
  TECH_PD_WARFORM_TRANSFORM_TITLE: "§HUnlocks Decisions:§! MWF-14 Trasform Decisions"
  TECH_PD_WARFORM_TRANSFORM_DESC: "The Mobile Warform Factory once had the ability to transform its districts to suit it's needs. We will be able to recreate that effect to a small degree."
- #Transformatino Decisions
- decision_pd_warform_transform_research_regular:0 "Tranform Research Districts"
- decision_pd_warform_transform_research_regular_desc:0 "We will tranform this district to a standard research set up."
+ warform_this_district_is_machine: "These districts are designed for machine interfaces and will need to be transformed for us to be able to use."
+ pd_machine_warform:0 "Machine Warform"
+ #Transform Decisions
+ decision_pd_warform_transform_research_regular:0 "Transform Research Districts"
+ decision_pd_warform_transform_research_regular_desc:0 "We will transform this district to a standard research set up."
  decision_pd_warform_transform_regular_tooltip:0 "This district will be tranfomed to be staffed by regular researchers studying a range of topics."
- decision_pd_warform_transform_research_cyberlab:0 "Tranform Research Districts"
- decision_pd_warform_transform_research_cyberlab_desc:0 "We will tranform this district to a cybernetic reseach set up, so we can focus on technologies suited to cybernetics."
+ decision_pd_warform_transform_research_cyberlab:0 "Transform Research Districts"
+ decision_pd_warform_transform_research_cyberlab_desc:0 "We will transform this district to a cybernetic reseach set up, so we can focus on technologies suited to cybernetics."
  decision_pd_warform_transform_organic_tooltip: "This district will be tranfomed to be staffed by specialized cybernetic researchers."
+ decision_pd_warform_transform_industrial_regular:0 "Transform Industrial Districts"
+ decision_pd_warform_transform_industrial_regular_desc:0 "We will transform these districts to be focused on convential industrial output, removing the ability to create warforms."
+ decision_pd_warform_transform_industrial_regular_tooltip:0 "The habitat will no longer be able to recruit Warforms, but will have improved industrial output."
+ decision_pd_warform_transform_industrial_warform:0 "Transform Industrial Districts"
+ decision_pd_warform_transform_industrial_warform_desc:0 "We will transform these districts to be focused on Warform production."
+ decision_pd_warform_transform_industrial_warform_tooltip:0 "The habitat will be able to recruit Warforms."
+ decision_pd_warform_transform_blue_warform:0 "Transform Auxiliary Function"
+ decision_pd_warform_transform_blue_warform_desc:0 "We will transofrm the auxiliary functions of this warform factory to be focused on our culture and traditions."
+ decision_pd_warform_transform_blue_warform_tooltip:0 "This habitat will have districts focused on unity production."
+ decision_pd_warform_transform_red_warform:0 "Transform Auxiliary Function"
+ decision_pd_warform_transform_red_warform_desc:0 "We will transofrm the auxiliary functions of this warform factory to be focused on war."
+ decision_pd_warform_transform_red_warform_tooltip:0 "This habitat will have districts focused on war and military logistics."
+ decision_pd_warform_transform_orange_warform:0 "Transform Auxiliary Function"
+ decision_pd_warform_transform_orange_warform_desc:0 "We will transofrm the auxiliary functions of this warform factory to be focused on it's base function of war and evaluation."
+ decision_pd_warform_transform_orange_warform_tooltip:0 "This habitat will have districts focused on war and evaluation."
