PD April final fixes

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
@@ -6327,7 +6327,7 @@
  pc_pd_techno_arc_adj:0 "technoed"
  mod_pc_pd_techno_arc_habitability:0 "Techno-Arcology Habitability"
  trait_pc_pd_techno_arc_preference:0 "Techno-Arcology Preference"
- trait_pc_pd_techno_arc_preference_desc:0 "$trait_pc_arctic_preference_desc"
+ trait_pc_pd_techno_arc_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  district_techno_industrial:0 "Sub-Surface Cauldron District"
  district_techno_industrial_desc:0 "We can expand on Unit 04's network of factories which will allow us to produce whatever we want, including Living Metal and more robotic creatures."
  district_techno_industrial_plural:0 "Sub-Surface Cauldron Districts"
@@ -6680,4 +6680,24 @@
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds & Ends
- TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"
+ pd_diamond:0 "Diamond World"
+ pd_diamond_desc:0 "Due to high temperatures and planetary pressure much of this world has formed into diamonds."
+ pd_carbon:0 "Carbon World"
+ pd_carbon_desc:0 "Unlike most silicon-oxygen compound based worlds, it has a much higher carbon-to-oxygen ratio."
+ pc_chthonian:0 "Chthonion World"
+ pc_chthonian_desc:0 "This planet was once a gas giant but it's had it's hydrogen and helium atmosphere stripped away leaving only the barren metallic core."
+ pd_iron:0 "Iron World"
+ pd_iron_desc:0 "Barren and rocky world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and completely devoid of life. The planet consists primarily of an iron-rich core with little or no mantle."
+ pd_volcanic:0 "Volcanic World"
+ pd_volcanic_desc:0 "High geological activity from the interior causes constant volcanic eruptions. Plumes of sulfur can get as tall as 500 km above the surface."
+ pd_hydrocarbon:0 "Hydrocarbon World"
+ pd_hydrocarbon_desc:0 "he dense opaque atmosphere of nitrogen, methane and ethane clouds. Liquid hydrocarbon lakes and seas can be found on this lifeless world."
+ pd_hot_gas_giant:0 "Hot Gas Giant World"
+ pd_hot_gas_giant_desc:0 "Temperatures of this gas giant are much higher than average which causes extreme weather patterns which can be exploited for energy and rare gas collection."
+ pd_cloudless_gas_giant:0 "Cloudless Gas Giant World"
+ pd_cloudless_gas_giant_desc:0 "Gaseous planet with an atmosphere that does not form global cloud cover, because it lacks suitable chemicals in the atmosphere to form clouds."
+ pd_cold_gas_giant:0 "Cold Gas Giant World"
+ pd_cold_gas_giant_desc:0 "Temperatures of this gas giant are lower than average which make for more stable research opportunities."
+ pd_ethane_ocean:0 "Ethane Ocean World"
+ pd_ethane_ocean_desc:0 "This world is covered in liquid hydro-carbon ethane oceans."
