--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6191,7 +6191,7 @@ snowball_earth.11.name:0 "The First Thaw"
  pc_pd_techno_arc_adj:0 "technoed"
  mod_pc_pd_techno_arc_habitability:0 "Techno-Arcology Habitability"
  trait_pc_pd_techno_arc_preference:0 "Techno-Arcology Preference"
- trait_pc_pd_techno_arc_preference_desc:0 "$trait_pc_arctic_preference_desc"
+ trait_pc_pd_techno_arc_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  district_techno_industrial:0 "Sub-Surface Cauldron District"
  district_techno_industrial_desc:0 "We can expand on Unit 04's network of factories which will allow us to produce whatever we want, including Living Metal and more robotic creatures."
  district_techno_industrial_plural:0 "Sub-Surface Cauldron Districts"
